<resources>
    <string name="config_statusBarComponent">com.android.systemui_ex.statusbar.phone.PhoneStatusBar</string>
    <string name="quick_settings_tiles_default">wifi,bt,inversion,cell,airplane,rotation,flashlight,vpn</string>
    <string name="quick_settings_tiles">default</string>
    <string name="velocity_tracker_impl">platform</string>
    <string name="doze_pulse_schedule">1s,10s,30s,60s</string>
    <string name="oneplus_quick_settings_head_tiles">default</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="lland">L Land</string>
    <string name="oneplus_control_panel_default_functions">flashlight,calculator,clock,camera,setting,airplane,wifi,cell,bt,rotation,bottomkeys,vibration,location</string>
    <string name="oneplus_control_panel_full_functions">flashlight,calculator,clock,camera,setting,airplane,wifi,cell,bt,rotation,bottomkeys,vibration,location,mute,donotdisturb</string>
    <string name="oneplus_device_tag">14049</string>
    <string name="oneplus_quick_settings_bottom_keys_label">Lock Buttons</string>
    <string name="oneplus_quick_settings_nightmode_label">Night mode</string>
    <string name="oneplus_wifi_open_alert_title">Are you sure to open wifi ?</string>
    <string name="oneplus_bt_open_alert_title">Are you sure you want to open Bluetooth?</string>
    <string name="oneplus_data_open_alert_title">Are you sure you want to turn on data traffic?</string>
    <string name="oneplus_controlpanel_data_tile">Data</string>
    <string name="quick_settings_location_off_label">Location information: off</string>
    <string name="operator_no_sim">No SIM card</string>
    <string name="operator_no_service">No service</string>
    <string name="operator_cm">China Mobile</string>
    <string name="operator_cu">China Unicom</string>
    <string name="operator_ct">China Telecom</string>
    <string name="accessibility_quick_settings_vpn_off">Turn off VPN reporting.</string>
    <string name="accessibility_quick_settings_vpn_on">Turn on VPN reporting.</string>
    <string name="accessibility_quick_settings_vpn_changed_off">VPN reporting turned off.</string>
    <string name="accessibility_quick_settings_vpn_changed_on">VPN reporting turned on.</string>
    <string name="muted_by">Has been muted by %1$s</string>
    <string name="three_key_no_distrub_mode">No Disturb</string>
    <string name="control_panel_do_not_disturb_title">Do not disturb</string>
    <string name="status_bar_return_phone_call_tip">Return call</string>
    <string name="title">Misoperation prevent mode is activated</string>
    <string name="title_cancel">Force to quit</string>
    <string name="top_tag">"Don't cover the top of screen"</string>
    <string name="top_tag_cancel">pressing Back and Volume up key</string>
    <string name="control_panel_notification_disable_bottom_keys_title">Keys have been disabled</string>
    <string name="control_panel_notification_disable_bottom_keys_content">You can restore this from the control center</string>
    <string name="status_bar_header_view_roaming">(Roaming)</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">Your recent screens appear here</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery is low</string>
    <string name="battery_low_percent_format">%s remaining</string>
    <string name="battery_low_percent_format_saver_started">%s remaining. Battery saver is on.</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="invalid_charger_title">USB charging not supported.</string>
    <string name="invalid_charger_text">Use only the supplied charger.</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on battery saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is:
%1$s"</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="screenshot_saving_ticker">Saving screenshot…</string>
    <string name="screenshot_saving_title">Saving screenshot…</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">"Couldn't capture screenshot."</string>
    <string name="screenshot_failed_text">"Can't take screenshot due to limited storage space, or it isn't allowed by the app or your organization."</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Overview</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="unlock_label">unlock</string>
    <string name="phone_label">open phone</string>
    <string name="camera_label">open camera</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX two bars.</string>
    <string name="accessibility_wimax_three_bars">WiMAX three bars.</string>
    <string name="accessibility_wimax_signal_full">WiMAX signal full.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_zero_bars">Zero bars.</string>
    <string name="accessibility_one_bar">One bar.</string>
    <string name="accessibility_two_bars">Two bars.</string>
    <string name="accessibility_three_bars">Three bars.</string>
    <string name="accessibility_signal_full">Signal full.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_data_connection_gprs">GPRS</string>
    <string name="accessibility_data_connection_1x">1 X</string>
    <string name="accessibility_data_connection_hspa">HSPA</string>
    <string name="accessibility_data_connection_3g">3G</string>
    <string name="keyguard_accessibility_pin_unlock">Pin unlock.</string>
    <string name="keyguard_accessibility_pin_area">PIN area</string>
    <string name="keyguard_accessibility_sim_puk_area">SIM PUK area</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="kg_emergency_call_label">Emergency call</string>
    <string name="kg_sim_pin_puk_ok">OK</string>
</resources>