<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui_ex.plugin.PreventModeView android:id="@id/prevent_mode_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/pevent_mode_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <View android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="48.0px" android:textColor="#ccffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/title" android:paddingTop="150.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="48.0px" android:textColor="#ccffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/title_cancel" android:paddingTop="150.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_cancel" android:alpha="0.0" style="?android:attr/textAppearanceMedium" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="42.0px" android:textColor="#99ffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/top_tag" android:paddingTop="172.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/top_tag" style="?android:attr/textAppearanceLarge" />
        <TextView android:textSize="42.0px" android:textColor="#99ffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/top_tag_cancel" android:paddingTop="172.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/top_tag_cancel" android:alpha="0.0" style="?android:attr/textAppearanceLarge" />
    </FrameLayout>
    <com.android.systemui_ex.plugin.RippleView android:id="@id/rippleview_first" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <com.android.systemui_ex.plugin.RippleView android:id="@id/rippleview_second" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</com.android.systemui_ex.plugin.PreventModeView>