<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui_ex.statusbar.phone.KeyguardBottomAreaView android:id="@id/keyguard_bottom_area" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui_ex">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="bottom|center" android:id="@id/keyguard_indication_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/keyguard_indication_margin_bottom" />
    <FrameLayout android:id="@id/preview_container" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.android.systemui_ex.statusbar.KeyguardAffordanceView android:layout_gravity="end|bottom|center" android:id="@id/camera_button" android:visibility="gone" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/ic_camera_alt_24dp" android:scaleType="center" android:tint="#ffffffff" android:contentDescription="@string/accessibility_camera_button" />
    <com.android.systemui_ex.statusbar.KeyguardAffordanceView android:layout_gravity="start|bottom|center" android:id="@id/phone_button" android:visibility="gone" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/ic_phone_24dp" android:scaleType="center" android:tint="#ffffffff" android:contentDescription="@string/accessibility_phone_button" />
    <com.android.systemui_ex.statusbar.KeyguardAffordanceView android:layout_gravity="bottom|center" android:id="@id/lock_icon" android:visibility="invisible" android:layout_width="@dimen/keyguard_affordance_width" android:layout_height="@dimen/keyguard_affordance_height" android:src="@drawable/ic_lock_24dp" android:scaleType="center" android:tint="#ffffffff" android:contentDescription="@string/accessibility_unlock_button" />
</com.android.systemui_ex.statusbar.phone.KeyguardBottomAreaView>