<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardSimPukView android:gravity="bottom|center" android:orientation="vertical" android:id="@id/keyguard_sim_puk_view" android:layout_width="fill_parent" android:layout_height="fill_parent" androidprv:layout_maxHeight="@dimen/keyguard_security_max_height" androidprv:layout_maxWidth="@dimen/keyguard_security_width"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/keyguard_sim" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_lockscreen_sim" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/sim_info_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@id/slot_id_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textDirection="locale" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:ellipsize="middle" android:layout_gravity="center_horizontal" android:id="@id/sub_display_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="110.0dip" android:singleLine="true" android:textDirection="locale" />
    </LinearLayout>
    <include android:gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="21.0dip" layout="@layout/keyguard_message_area" />
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/keyguard_bouncer_frame" android:layout_width="fill_parent" android:layout_height="360.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="3.0dip" android:layoutDirection="ltr">
        <RelativeLayout android:id="@id/row0" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip">
            <com.android.keyguard.PasswordTextView android:gravity="center" android:id="@id/pukEntry" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="52.0dip" android:layout_centerHorizontal="true" android:contentDescription="@string/keyguard_accessibility_sim_puk_area" androidprv:scaledTextSize="28" />
            <ImageButton android:gravity="center_vertical" android:id="@id/delete_button" android:background="@drawable/ripple_drawable" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_sim_delete" android:layout_alignParentRight="true" android:contentDescription="@string/keyboardview_keycode_delete" android:layout_alignEnd="@id/pinEntry" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key1" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="1" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key2" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="2" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key3" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="3" androidprv:textView="@id/pukEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key4" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="4" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key5" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="5" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key6" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="6" androidprv:textView="@id/pukEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <com.android.keyguard.NumPadKey android:id="@id/key7" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="7" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key8" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="8" androidprv:textView="@id/pukEntry" />
            <com.android.keyguard.NumPadKey android:id="@id/key9" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="9" androidprv:textView="@id/pukEntry" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="16.0dip" android:layout_weight="1.0">
            <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/digit_emergency_call" android:background="@drawable/ripple_drawable" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/kg_emergency_call_label" android:layout_weight="1.0" />
            <com.android.keyguard.NumPadKey android:id="@id/key0" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" androidprv:digit="0" androidprv:textView="@id/pukEntry" />
            <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/key_enter" android:background="@drawable/ripple_drawable" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/kg_sim_pin_puk_ok" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</com.android.keyguard.KeyguardSimPukView>